--- a/backend/package.json
+++ b/backend/package.json
@@ -3,21 +3,32 @@
   "version": "1.0.0",
   "main": "dist/server.js",
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "ts-node src/server.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --setupFiles dotenv/config"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.9.0",
-    "mongoose": "^7.3.1",
-    "dotenv": "^16.0.3"
+    "graphql": "^15.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.1.6",
-    "ts-node": "^10.9.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.2.5",
-    "@types/express": "^4.17.17"
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
